# EMSel

./: README.md  core.py  emsel_util.py  pyproject.toml  requirements.txt  run_emsel.py  simulate_data.py
figures/: README.md
figures/gb_dataset/: README.md  SLURM_Ne_final.py  SLURM_example.py  add_full_agg.py  aggregate_data.py  combine_split_runs.py  compute_bootstraps.py  gb_bootstrap_fitting.py  gb_figures.py  interpolate_Ne_grid.py  mathieson_manhattans.py  meta_gb_EM.sh  permute_gb_data.py  plot_binned_trajectories.py  plot_gb_permutations.py  plot_genomewide_correlations.py  plot_means_and_missingness.py  plot_trajectories.py  sim_gb_bootstraps.py
figures/horse_dataset/: README.md  SLURM_example.py  extract_means.py  horse_final_analysis.py  horse_final_simulation.py  plot_horse_trajectory.py
figures/simulation/: Ne_misspec_qqs.py  README.md  SLURM_Ne_computation.py  SLURM_Ne_others_sim.py  SLURM_Ne_pure_sim.py  SLURM_example.py  SLURM_extra_sims.py  big_bootstrap_fitting.py  big_d2_qqs.py  bootstrap_fitting.py  box_and_strip_plots.py  combine_split_runs.py  d2_qqs_and_confusiontables.py  deltall_qqs_and_confusiontables.py  extract_means.py  file_str_boxplots.py  flat_ne_plots.py  interpolate_Ne_grid.py  make_directories.py  mismatched_analysis.py  mismatched_auc_plots.py  mismatched_boxplots.py  (+9 more)
sample_datasets/: GB_individuals.table  GB_sample_sizes.table  add_s025_g251_d25_data.csv  full_sample_sizes_8.table  gengamma_params.pkl  horse_data_colon3.csv  horse_data_full.csv  ibdne_original.txt  ibdne_raw.txt  neutral_g125_dal_special_Ne9715_gengamma_fit.pkl
(+19 files in other folders)
