[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emsel"
dynamic = ["version"]
description = 'EM algorithm for quantifying general diploid selection'
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
authors = [
  { name = "Adam Fine", email = "afine2@uchicago.edu" },
  { name = "Matthias Steinruecken", email = "steinrue@uchicago.edu" },
]
dependencies = [
"joblib",
"matplotlib",
"numba",
"numpy",
"pandas",
"pathlib2",
"scikit-allel>=1.3",
"scipy",
"sympy",
"tqdm",]

[project.optional-dependencies]
plots = ["Cartopy", "colorcet", "cycler", "jinja2", "seaborn>=0.13"]

[project.extras]
plots = ["Cartopy", "colorcet", "cycler", "jinja2", "seaborn>=0.13"]

[project.urls]
Documentation = "https://github.com/steinrue/emsel#readme"

[project.scripts]
emsel = "emsel.run_emsel:main"
emsel-sim = "emsel.simulate_data:main"

[tool.hatch.version]
path = "src/emsel/__about__.py"

[tool.hatch]
package-dir = "src/emsel"